@@ -7,8 +7,12 @@ ifeq ($(AGENTPATH),)
 AGENTPATH=/usr/share/apport/apport
 endif
 
+ifneq ($(PIPE_CORE),)
+PIPE=-DPIPE_CORE
+endif
+
 $(LIB): lib$(LIBNAME).c
-	$(CC) $(CFLAGS) -DAGENTPATH=\"$(AGENTPATH)\" -shared $^ -o $@
+	$(CC) $(CFLAGS) -DAGENTPATH=\"$(AGENTPATH)\" $(PIPE) -shared $^ -o $@
 
 clean:
 	rm -f *.o $(LIB)
