@@ -36,8 +36,10 @@ apport (0.29) UNRELEASED; urgency=low
     file. Print it if the test suite fails.
   * test-apport: Fix EXFAILure of the 'core dump works for non-writable cwds'
     test case.
+  * preloadlib: Support -DPIPE_CORE mode which emulates the
+    pipe-in-core_pattern mode of kernel 2.6.19.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Sat,  4 Nov 2006 12:24:30 -0800
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Sat,  4 Nov 2006 12:37:37 -0800
 
 apport (0.28) edgy; urgency=low
 
